adding daily records

--- a/cssStyle.css
+++ b/cssStyle.css
@@ -212,7 +212,7 @@ header {
 
 
 /* =====================================================
-   ADD RECORD SECTION
+   FORM ADD RECORD SECTION
    ===================================================== */
 .add-record {
     display: none;
